Fix Inputs Problems Around Emptyness & Name Overlapping

--- a/add/add.css
+++ b/add/add.css
@@ -17,11 +17,14 @@
     /* margin-right: 1rem; */
 }
 
-.nameExistsWarning {
-    border: 2px solid red;
+.Warning {
+    /* border: 1px solid var(--BWBorderColor); */
+    font-weight: 900;
+    background-color: var(--BoxBackgroundColorStrong);
     padding: 0.5rem;
-    border-radius: 5px;
+    border-radius: 4px;
     display: none;
+    margin-bottom: 1rem;
 }
 
 .InputMainGroup {
@@ -51,7 +54,7 @@
 }
 
 .AddTitle {
-    margin: 3rem 0;
+    margin: 1rem 0;
     text-align: center;
 }
 
